new file:   images/tudo-sobre-portugal.jpg 	modified:   index.html 	new file:   styles.css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Page about a beautifull and profissional man called Paulo">
+    <meta name="author" content="Paulo Barroso">
+    <link rel="stylesheet" href="styles.css">
     <title>Paulo Ricardo Fernandes Barroso | WDD130</title>
 </head>
 <body>
@@ -18,6 +21,11 @@
         <img src="images/profile-foto.jpeg" alt="Hello my name is Paulo Barroso" width="200">
         <p>Hello! My name is Paulo Ricardo Fernandes Barroso, and i am from Portugal, i enjoy playing football a lot, it was my dream to became a professional football player, but now my dream is to became a succefull Software Developer. Hope everything goes as planned because it will provide for my family as well, to be able to have a better life.</p>
     </main>
+    <aside>
+        <h2>Portugal, Lisbon</h2>
+        <img src="/images/tudo-sobre-portugal.jpg" alt="City of Lisbon">
+        <p>Portugal is a small country but a beautifull place to live. Nice food, friendly people, nice weather as well.</p>
+    </aside>
     <footer>
         <p>©2024 🌴 Paulo Barroso 🌴 Lisbon, Portugal   </p>
     </footer>
