modified:   wwr/site-plan-rafting.html

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -33,7 +33,7 @@
             primary-color: #FFFFFF.
             secundary-color: #00171F. 
             accent1-color: #003459. 
-            accent2-color: #007EA7. 
+            accent2-color: #007EA7
             Palette URl: <a href="
             https://coolors.co/0d0106-3626a7-657ed4-ff331f-fbfbff">https://coolors.co/0d0106-3626a7-657ed4-ff331f-fbfbff</a> 
         </p>
