--- a/index.html
+++ b/index.html
@@ -14,14 +14,21 @@
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+            <a href="https://www.facebook.com/Pablopy10" target="_blank">My facebook page</a>
+            <a href="https://www.linkedin.com/in/paulo-barroso-b909719b/" target="_blank">My Linkedin Page</a>
            </nav>
     </header>
     <main>
         <h1>Paulo Ricardo Fernandes Barroso | WDD130</h1>
         <img src="images/profile-foto.jpeg" alt="Hello my name is Paulo Barroso" width="200">
-        <p>Hello! My name is Paulo Ricardo Fernandes Barroso, and i am from Portugal, i enjoy playing football a lot, it was my dream to became a professional football player, but now my dream is to became a succefull Software Developer. Hope everything goes as planned because it will provide for my family as well, to be able to have a better life.</p>
+        <p>Hello! My name is Paulo Ricardo Fernandes Barroso, and i am from Portugal, i enjoy playing football a lot, it was my dream to became a professional football player, but now my dream is to became a succefull Software Developer. Hope everything goes as planned because it will provide for my family as well, to be able to have a better life. My goal is to became a succefull business man, and i will do my best to achieve that.</p>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/lisbon-portugal-temple?lang=spa" target="_blank">Temple of Lisbon</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/johannesburg-south-africa-temple?lang=spa" target="_blank">Temple of Johannesburg</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=spa" target="_blank">Temple of washinton</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Portugal, Lisbon</h2>
         <img src="images/tudo-sobre-portugal.jpg" alt="City of Lisbon">
         <p>Portugal is a small country but a beautifull place to live. Nice food, friendly people, nice weather as well.</p>
@@ -30,4 +37,5 @@
         <p>©2024 🌴 Paulo Barroso 🌴 Lisbon, Portugal</p>
     </footer>
 </body>
+<!-- last modified: 09/05/2024-->
 </html>
