--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href="index.html">Home</a>
             <a href="wwr/">Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+            <a href="wwr/about.html">About us</a>
             <a href="https://www.facebook.com/Pablopy10" target="_blank">My facebook page</a>
             <a href="https://www.linkedin.com/in/paulo-barroso-b909719b/" target="_blank">My Linkedin Page</a>
            </nav>
