modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -19,21 +19,23 @@
             <a href="https://www.linkedin.com/in/paulo-barroso-b909719b/" target="_blank">My Linkedin Page</a>
            </nav>
     </header>
-    <main>
-        <h1>Paulo Ricardo Fernandes Barroso | WDD130</h1>
-        <img src="images/profile-foto.jpeg" alt="Hello my name is Paulo Barroso" width="200">
-        <p>Hello! My name is Paulo Ricardo Fernandes Barroso, and i am from Portugal, i enjoy playing football a lot, it was my dream to became a professional football player, but now my dream is to became a succefull Software Developer. Hope everything goes as planned because it will provide for my family as well, to be able to have a better life. My goal is to became a succefull business man, and i will do my best to achieve that.</p>
-        <ul class="box">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/lisbon-portugal-temple?lang=spa" target="_blank">Temple of Lisbon</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/johannesburg-south-africa-temple?lang=spa" target="_blank">Temple of Johannesburg</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=spa" target="_blank">Temple of washinton</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Portugal, Lisbon</h2>
-        <img src="images/tudo-sobre-portugal.jpg" alt="City of Lisbon">
-        <p>Portugal is a small country but a beautifull place to live. Nice food, friendly people, nice weather as well.</p>
-    </aside>
+    <div class="grid">
+        <main>
+            <h1>Paulo Barroso | WDD130</h1>
+            <img src="images/profile-foto.jpeg" alt="Hello my name is Paulo Barroso" width="200">
+            <p>Hello! My name is Paulo Ricardo Fernandes Barroso, and i am from Portugal, i enjoy playing football a lot, it was my dream to became a professional football player, but now my dream is to became a succefull Software Developer. Hope everything goes as planned because it will provide for my family as well, to be able to have a better life. My goal is to became a succefull business man, and i will do my best to achieve that.</p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/lisbon-portugal-temple?lang=spa" target="_blank">Temple of Lisbon</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/johannesburg-south-africa-temple?lang=spa" target="_blank">Temple of Johannesburg</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=spa" target="_blank">Temple of washinton</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Portugal, Lisbon</h2>
+            <img src="images/tudo-sobre-portugal.jpg" alt="City of Lisbon">
+            <p>Portugal is a small country but a beautifull place to live. Nice food, friendly people, nice weather as well.is the capital and largest city of Portugal, with an estimated population of 548,703 as of 2022 within its administrative limits[4] and 2,871,133 within the metropolis.[5] Lisbon is mainland Europe's westernmost capital city (second overall after Reykjavik) and the only one along the Atlantic coast, the others (Reykjavik and Dublin) being on islands. The city lies in the western portion of the Iberian Peninsula, on the northern shore of the River Tagus. The western portion of its metro area, the Portuguese Riviera, hosts the westernmost point of Continental Europe, culminating at Cabo da Roca.</p>
+        </aside>
+    </div>
     <footer>
         <p>©2024 🌴 Paulo Barroso 🌴 Lisbon, Portugal</p>
     </footer>
