--- a/wwr/about.html
+++ b/wwr/about.html
@@ -8,44 +8,62 @@
 </head>
 <body>
     <header>
-        <img src="images/rafting.jpg" alt="Rafting_logo">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact us</a>
-        </nav>
+        <div class="nav">
+            <img src="images/rafting.jpg" alt="Rafting_logo">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About us</a>
+                <a href="trips.html">Trips</a>
+                <a href="contact.html">Contact us</a>
+            </nav>
+        </div>
     </header>
     <main>
-        <div class="hero"> <img src="images/rafting_hero.jpg" alt="hero">
-            <h1>Paulo Barroso Rafting Lda</h1>
-            <article>
-                <img src="images/happy.jpg" alt="happy">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                </p>
-                
-            </article>
+        <div class="hero">
+            <img src="images/rafting_hero.jpg" alt="hero">
+            <div class="hero-text">
+                <h1>Paulo Barroso Rafting Lda</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            </div>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deleniti totam dolore cupiditate eum non, beatae porro veritatis a suscipit cumque dicta ducimus doloremque voluptas aut quibusdam qui, dolores voluptatem.</p>
+            <div class="history-content">
+                <img src="images/happy.jpg" alt="happy">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deleniti totam dolore cupiditate eum non, beatae porro veritatis a suscipit cumque dicta ducimus doloremque voluptas aut quibusdam qui, dolores voluptatem.</p>
+            </div>
         </section>
-
-        <section>
+        <section class="adventures">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/image1.jpg" alt="image1">
-            <img src="images/image2.jpg" alt="image2">
-            <img src="images/image3.jpg" alt="image3">
-            <img src="images/image4.jpg" alt="image4">
-            <img src="images/image5.jpg" alt="image5">
+            <figure>
+                <img src="images/image1.jpg" alt="Los Dientes del Diablo">
+                <figcaption>Los Dientes del Diablo</figcaption>
+            </figure>
+            <figure>
+                <img src="images/image2.jpg" alt="Big Mallard">
+                <figcaption>Big Mallard</figcaption>
+            </figure>
+            <figure>
+                <img src="images/image3.jpg" alt="Half Day Adventure">
+                <figcaption>Half Day Adventure</figcaption>
+            </figure>
+            <figure>
+                <img src="images/image4.jpg" alt="Rapid Runner">
+                <figcaption>Rapid Runner</figcaption>
+            </figure>
+            <figure>
+                <img src="images/image5.jpg" alt="Sunset Rafting">
+                <figcaption>Sunset Rafting</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
         <p>©2024 | Paulo Barroso Rafting Lda | Paulo Barroso</p>
-        <a href="https://www.facebook.com/">Facebook</a>
-        <a href="https://www.instagram.com/">Instagram</a>
-        <a href="https://twitter.com/">Twitter</a>
+        <div class="social-media">
+            <a href="https://www.facebook.com/"><img src="images/facebook-icon.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/"><img src="images/instagram-icon.png" alt="Instagram"></a>
+            <a href="https://twitter.com/"><img src="images/twitter-icon.png" alt="Twitter"></a>
+        </div>
     </footer>
-    
 </body>
 </html>
