--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Page about a beautifull and profissional man called Paulo">
+    <meta name="description" content="Page about a beautiful and professional man called Paulo">
     <meta name="author" content="Paulo Barroso">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="example.css">
     <title>Paulo Ricardo Fernandes Barroso | WDD130</title>
 </head>
 <body>
@@ -14,31 +14,30 @@
             <a href="index.html">Home</a>
             <a href="wwr/">Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
-            <a href="wwr/about.html">About us</a>
-            <a href="https://www.facebook.com/Pablopy10" target="_blank">My facebook page</a>
-            <a href="https://www.linkedin.com/in/paulo-barroso-b909719b/" target="_blank">My Linkedin Page</a>
-           </nav>
+            <a href="wwr/about.html">About Us</a>
+            <a href="https://www.facebook.com/Pablopy10" target="_blank">Facebook</a>
+            <a href="https://www.linkedin.com/in/paulo-barroso-b909719b/" target="_blank">LinkedIn</a>
+        </nav>
     </header>
     <div class="grid">
         <main>
             <h1>Paulo Barroso | WDD130</h1>
-            <img src="images/profile-foto.jpeg" alt="Hello my name is Paulo Barroso" width="200">
-            <p>Hello! My name is Paulo Ricardo Fernandes Barroso, and i am from Portugal, i enjoy playing football a lot, it was my dream to became a professional football player, but now my dream is to became a succefull Software Developer. Hope everything goes as planned because it will provide for my family as well, to be able to have a better life. My goal is to became a succefull business man, and i will do my best to achieve that.</p>
+            <img src="images/profile-foto.jpeg" alt="Profile picture of Paulo Barroso" class="profile-pic">
+            <p>Hello! My name is Paulo Ricardo Fernandes Barroso, and I am from Portugal. I enjoy playing football a lot; it was my dream to become a professional football player, but now my dream is to become a successful Software Developer. I hope everything goes as planned because it will provide for my family as well, allowing us to have a better life. My goal is to become a successful businessman, and I will do my best to achieve that.</p>
             <ul class="box">
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/lisbon-portugal-temple?lang=spa" target="_blank">Temple of Lisbon</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/johannesburg-south-africa-temple?lang=spa" target="_blank">Temple of Johannesburg</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=spa" target="_blank">Temple of washinton</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=spa" target="_blank">Temple of Washington</a></li>
             </ul>
         </main>
         <aside class="box">
             <h2>Portugal, Lisbon</h2>
-            <img src="images/tudo-sobre-portugal.jpg" alt="City of Lisbon">
-            <p>Portugal is a small country but a beautifull place to live. Nice food, friendly people, nice weather as well.is the capital and largest city of Portugal, with an estimated population of 548,703 as of 2022 within its administrative limits[4] and 2,871,133 within the metropolis.[5] Lisbon is mainland Europe's westernmost capital city (second overall after Reykjavik) and the only one along the Atlantic coast, the others (Reykjavik and Dublin) being on islands. The city lies in the western portion of the Iberian Peninsula, on the northern shore of the River Tagus. The western portion of its metro area, the Portuguese Riviera, hosts the westernmost point of Continental Europe, culminating at Cabo da Roca.</p>
+            <img src="images/tudo-sobre-portugal.jpg" alt="City of Lisbon" class="city-img">
+            <p>Portugal is a small country but a beautiful place to live. It has nice food, friendly people, and nice weather. Lisbon is the capital and largest city of Portugal, with an estimated population of 548,703 as of 2022 within its administrative limits and 2,871,133 within the metropolis. Lisbon is mainland Europe's westernmost capital city (second overall after Reykjavik) and the only one along the Atlantic coast, the others (Reykjavik and Dublin) being on islands. The city lies in the western portion of the Iberian Peninsula, on the northern shore of the River Tagus. The western portion of its metro area, the Portuguese Riviera, hosts the westernmost point of Continental Europe, culminating at Cabo da Roca.</p>
         </aside>
     </div>
     <footer>
-        <p>©2024 🌴 Paulo Barroso 🌴 Lisbon, Portugal</p>
+        <p>©2024 Paulo Barroso | Lisbon, Portugal</p>
     </footer>
 </body>
-<!-- last modified: 09/05/2024-->
 </html>
