modified:   example.css

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,66 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="stylesheet" href="/wwr/styles/about.css">
     <title>About</title>
 </head>
 <body>
     <header>
         <div class="nav">
-            <img src="images/rafting.jpg" alt="Rafting_logo">
+            <img src="/wwr/images/rafting.jpg" alt="Rafting logo" class="logo">
             <nav>
                 <a href="index.html">Home</a>
-                <a href="about.html">About us</a>
+                <a href="about.html">About Us</a>
                 <a href="trips.html">Trips</a>
-                <a href="contact.html">Contact us</a>
+                <a href="contact.html">Contact Us</a>
             </nav>
         </div>
     </header>
     <main>
         <div class="hero">
-            <img src="images/rafting_hero.jpg" alt="hero">
+            <img src="/wwr/images/rafting_hero.jpg" alt="Hero Image" class="hero-img">
             <div class="hero-text">
                 <h1>Paulo Barroso Rafting Lda</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
             </div>
         </div>
         <section class="history">
             <h2>History</h2>
             <div class="history-content">
-                <img src="images/happy.jpg" alt="happy">
+                <img src="/wwr/images/happy.jpg" alt="Happy People" class="history-img">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deleniti totam dolore cupiditate eum non, beatae porro veritatis a suscipit cumque dicta ducimus doloremque voluptas aut quibusdam qui, dolores voluptatem.</p>
             </div>
         </section>
         <section class="adventures">
             <h2>Adventure Awaits You!</h2>
-            <figure>
-                <img src="images/image1.jpg" alt="Los Dientes del Diablo">
-                <figcaption>Los Dientes del Diablo</figcaption>
-            </figure>
-            <figure>
-                <img src="images/image2.jpg" alt="Big Mallard">
-                <figcaption>Big Mallard</figcaption>
-            </figure>
-            <figure>
-                <img src="images/image3.jpg" alt="Half Day Adventure">
-                <figcaption>Half Day Adventure</figcaption>
-            </figure>
-            <figure>
-                <img src="images/image4.jpg" alt="Rapid Runner">
-                <figcaption>Rapid Runner</figcaption>
-            </figure>
-            <figure>
-                <img src="images/image5.jpg" alt="Sunset Rafting">
-                <figcaption>Sunset Rafting</figcaption>
-            </figure>
+            <div class="adventures-grid">
+                <figure>
+                    <img src="/wwr/images/image1.jpg" alt="Los Dientes del Diablo">
+                    <figcaption>Los Dientes del Diablo</figcaption>
+                </figure>
+                <figure>
+                    <img src="/wwr/images/image2.jpg" alt="Big Mallard">
+                    <figcaption>Big Mallard</figcaption>
+                </figure>
+                <figure>
+                    <img src="/wwr/images/image3.jpg" alt="Half Day Adventure">
+                    <figcaption>Half Day Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="/wwr/images/image4.jpg" alt="Rapid Runner">
+                    <figcaption>Rapid Runner</figcaption>
+                </figure>
+                <figure>
+                    <img src="/wwr/images/image5.jpg" alt="Sunset Rafting">
+                    <figcaption>Sunset Rafting</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
     <footer>
         <p>©2024 | Paulo Barroso Rafting Lda | Paulo Barroso</p>
         <div class="social-media">
-            <a href="https://www.facebook.com/"><img src="images/facebook-icon.png" alt="Facebook"></a>
-            <a href="https://www.instagram.com/"><img src="images/instagram-icon.png" alt="Instagram"></a>
-            <a href="https://twitter.com/"><img src="images/twitter-icon.png" alt="Twitter"></a>
+            <a href="https://www.facebook.com/"><img src="/wwr/images/facebook_logo.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/"><img src="/wwr/images/instagram_logo.png" alt="Instagram"></a>
+            <a href="https://twitter.com/"><img src="/wwr/images/twitter-bird-logo.png.png" alt="Twitter"></a>
         </div>
     </footer>
 </body>
