--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Page about a beautiful and professional man called Paulo">
     <meta name="author" content="Paulo Barroso">
-    <link rel="stylesheet" href="example.css">
+    <link rel="stylesheet" href="rafting.css">
     <title>Paulo Ricardo Fernandes Barroso | WDD130</title>
 </head>
 <body>
