renamed:    images/profile-foto.jpeg -> wwr/images/profile-foto.jpeg 	renamed:    images/tudo-sobre-portugal.jpg -> wwr/images/tudo-sobre-portugal.jpg 	renamed:    index.html -> wwr/index.html 	renamed:    quiz.html -> wwr/quiz.html 	renamed:    quiz.css -> wwr/styles/quiz.css 	renamed:    styles.css -> wwr/styles/styles.css

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Page about a beautiful and professional man called Paulo">
     <meta name="author" content="Paulo Barroso">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/wwr/styles/styles.css">
     <title>Paulo Ricardo Fernandes Barroso | WDD130</title>
 </head>
 <body>
@@ -13,8 +13,8 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="wwr/">Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
-            <a href="wwr/about.html">About Us</a>
+            <a href="site-plan-rafting.html">Rafting Site Plan</a>
+            <a href="about.html">About Us</a>
             <a href="https://www.facebook.com/Pablopy10" target="_blank">Facebook</a>
             <a href="https://www.linkedin.com/in/paulo-barroso-b909719b/" target="_blank">LinkedIn</a>
         </nav>
@@ -22,7 +22,7 @@
     <div class="grid">
         <main>
             <h1>Paulo Barroso | WDD130</h1>
-            <img src="images/profile-foto.jpeg" alt="Profile picture of Paulo Barroso" class="profile-pic">
+            <img src="/wwr/images/profile-foto.jpeg" alt="Profile picture of Paulo Barroso" class="profile-pic">
             <p>Hello! My name is Paulo Ricardo Fernandes Barroso, and I am from Portugal. I enjoy playing football a lot; it was my dream to become a professional football player, but now my dream is to become a successful Software Developer. I hope everything goes as planned because it will provide for my family as well, allowing us to have a better life. My goal is to become a successful businessman, and I will do my best to achieve that.</p>
             <ul class="box">
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/lisbon-portugal-temple?lang=spa" target="_blank">Temple of Lisbon</a></li>
@@ -32,7 +32,7 @@
         </main>
         <aside class="box">
             <h2>Portugal, Lisbon</h2>
-            <img src="images/tudo-sobre-portugal.jpg" alt="City of Lisbon" class="city-img">
+            <img src="/wwr/images/tudo-sobre-portugal.jpg" alt="City of Lisbon" class="city-img">
             <p>Portugal is a small country but a beautiful place to live. It has nice food, friendly people, and nice weather. Lisbon is the capital and largest city of Portugal, with an estimated population of 548,703 as of 2022 within its administrative limits and 2,871,133 within the metropolis. Lisbon is mainland Europe's westernmost capital city (second overall after Reykjavik) and the only one along the Atlantic coast, the others (Reykjavik and Dublin) being on islands. The city lies in the western portion of the Iberian Peninsula, on the northern shore of the River Tagus. The western portion of its metro area, the Portuguese Riviera, hosts the westernmost point of Continental Europe, culminating at Cabo da Roca.</p>
         </aside>
     </div>
