modified:   index.html 	modified:   wwr/about.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,7 +11,7 @@
         <div class="nav">
             <img src="/wwr/images/rafting.jpg" alt="Rafting logo" class="logo">
             <nav>
-                <a href="index.html">Home</a>
+                <a href="WDD130/index.html">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="trips.html">Trips</a>
                 <a href="contact.html">Contact Us</a>
