--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="index.html">Home</a>
             <a href="wwr/">Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
-            <a href="about.html">About Us</a>
+            <a href="wwr/about.html">About Us</a>
             <a href="https://www.facebook.com/Pablopy10" target="_blank">Facebook</a>
             <a href="https://www.linkedin.com/in/paulo-barroso-b909719b/" target="_blank">LinkedIn</a>
         </nav>
