--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/wwr/styles/about.css">
+    <link rel="stylesheet" href="styles/about.css">
     <title>About</title>
 </head>
 <body>
     <header>
         <div class="nav">
-            <img src="/wwr/images/rafting.jpg" alt="Rafting logo" class="logo">
+            <img src="images/rafting.jpg" alt="Rafting logo" class="logo">
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
@@ -20,7 +20,7 @@
     </header>
     <main>
         <div class="hero">
-            <img src="/wwr/images/rafting_hero.jpg" alt="Hero Image" class="hero-img">
+            <img src="images/rafting_hero.jpg" alt="Hero Image" class="hero-img">
             <div class="hero-text">
                 <h1>Paulo Barroso Rafting Lda</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
@@ -29,7 +29,7 @@
         <section class="history">
             <h2>History</h2>
             <div class="history-content">
-                <img src="/wwr/images/happy.jpg" alt="Happy People" class="history-img">
+                <img src="images/happy.jpg" alt="Happy People" class="history-img">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deleniti totam dolore cupiditate eum non, beatae porro veritatis a suscipit cumque dicta ducimus doloremque voluptas aut quibusdam qui, dolores voluptatem.</p>
             </div>
         </section>
@@ -37,15 +37,15 @@
             <h2>Adventure Awaits You!</h2>
             <div class="adventures-grid">
                 <figure>
-                    <img src="/wwr/images/image1.jpg" alt="Los Dientes del Diablo">
+                    <img src="images/image1.jpg" alt="Los Dientes del Diablo">
                     <figcaption>Los Dientes del Diablo</figcaption>
                 </figure>
                 <figure>
-                    <img src="/wwr/images/image2.jpg" alt="Big Mallard">
+                    <img src="image2.jpg" alt="Big Mallard">
                     <figcaption>Big Mallard</figcaption>
                 </figure>
                 <figure>
-                    <img src="/wwr/images/image3.jpg" alt="Half Day Adventure">
+                    <img src="images/image3.jpg" alt="Half Day Adventure">
                     <figcaption>Half Day Adventure</figcaption>
                 </figure>
                 <figure>
@@ -53,7 +53,7 @@
                     <figcaption>Rapid Runner</figcaption>
                 </figure>
                 <figure>
-                    <img src="/wwr/images/image5.jpg" alt="Sunset Rafting">
+                    <img src="images/image5.jpg" alt="Sunset Rafting">
                     <figcaption>Sunset Rafting</figcaption>
                 </figure>
             </div>
