modified:   wwr/about.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,7 +11,7 @@
         <div class="nav">
             <img src="images/rafting.jpg" alt="Rafting logo" class="logo">
             <nav>
-                <a href="index.html">Home</a>
+                <a href="/index.html">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="trips.html">Trips</a>
                 <a href="contact.html">Contact Us</a>
@@ -49,7 +49,7 @@
                     <figcaption>Half Day Adventure</figcaption>
                 </figure>
                 <figure>
-                    <img src="/wwr/images/image4.jpg" alt="Rapid Runner">
+                    <img src="images/image4.jpg" alt="Rapid Runner">
                     <figcaption>Rapid Runner</figcaption>
                 </figure>
                 <figure>
@@ -62,9 +62,9 @@
     <footer>
         <p>©2024 | Paulo Barroso Rafting Lda | Paulo Barroso</p>
         <div class="social-media">
-            <a href="https://www.facebook.com/"><img src="/wwr/images/facebook_logo.png" alt="Facebook"></a>
-            <a href="https://www.instagram.com/"><img src="/wwr/images/instagram_logo.png" alt="Instagram"></a>
-            <a href="https://twitter.com/"><img src="/wwr/images/twitter-bird-logo.png.png" alt="Twitter"></a>
+            <a href="https://www.facebook.com/"><img src="images/facebook_logo.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/"><img src="images/instagram_logo.png" alt="Instagram"></a>
+            <a href="https://twitter.com/"><img src="images/twitter-bird-logo.png.png" alt="Twitter"></a>
         </div>
     </footer>
 </body>
