deleted:    example.css 	deleted:    example.html 	modified:   wwr/about.html 	modified:   wwr/contact.html 	new file:   wwr/images/trip1.jpg 	new file:   wwr/images/trip2.jpg 	new file:   wwr/images/trip3.jpg 	new file:   wwr/index.html 	modified:   wwr/site-plan-rafting.html 	new file:   wwr/styles/contact.css 	modified:   wwr/styles/site-plan-rafting.css 	new file:   wwr/styles/styles.css 	new file:   wwr/styles/trips.css 	new file:   wwr/trips.html

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="stylesheet" href="styles/contact.css">
     <title>Contact Us - Paulo Barroso Rafting Lda</title>
     <meta name="description" content="Get in touch with Paulo Barroso Rafting Lda for inquiries, reservations, and suggestions.">
 </head>
 <body>
     <header>
         <div class="nav">
-            <img src="images/rafting.jpg" alt="Rafting_logo">
+            <img src="images/rafting.jpg" alt="Rafting Logo" class="logo">
             <nav>
                 <a href="index.html">Home</a>
-                <a href="about.html">About us</a>
+                <a href="about.html">About Us</a>
                 <a href="trips.html">Trips</a>
-                <a href="contact.html">Contact us</a>
+                <a href="contact.html">Contact Us</a>
             </nav>
         </div>
     </header>
@@ -27,23 +27,21 @@
             <p>Email: <a href="mailto:info@rafting.com">info@rafting.com</a></p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3164.91705336485!2d-122.08424968469007!3d37.42199997982513!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fbaacb7d4c4d3%3A0x2b5d45d485d1f5cd!2sGoogleplex!5e0!3m2!1sen!2sus!4v1625198704313!5m2!1sen!2sus" width="600" height="450" allowfullscreen="" loading="lazy"></iframe>
         </section>
-        
         <section id="employees">
             <h2>Meet Our Team</h2>
             <div class="employee">
-                <img src="images/John doe.jpg" alt="Employee 1">
+                <img src="images/John doe.jpg" alt="John Doe - Tour Guide">
                 <figcaption>John Doe - Tour Guide</figcaption>
             </div>
             <div class="employee">
-                <img src="images/Jane Smith.jpg" alt="Employee 2">
+                <img src="images/Jane Smith.jpg" alt="Jane Smith - Safety Instructor">
                 <figcaption>Jane Smith - Safety Instructor</figcaption>
             </div>
             <div class="employee">
-                <img src="images/Emily Johnson.jpg" alt="Employee 3">
+                <img src="images/Emily Johnson.jpg" alt="Emily Johnson - Customer Service">
                 <figcaption>Emily Johnson - Customer Service</figcaption>
             </div>
         </section>
-        
         <section id="contact-form">
             <h2>Contact Form</h2>
             <form action="submit_form.php" method="post">
@@ -74,9 +72,9 @@
     <footer>
         <p>©2024 | Paulo Barroso Rafting Lda | Paulo Barroso</p>
         <div class="social-media">
-            <a href="https://www.facebook.com/"><img src="images/facebook-icon.png" alt="Facebook"></a>
-            <a href="https://www.instagram.com/"><img src="images/instagram-icon.png" alt="Instagram"></a>
-            <a href="https://twitter.com/"><img src="images/twitter-icon.png" alt="Twitter"></a>
+            <a href="https://www.facebook.com/"><img src="images/facebook_logo.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/"><img src="images/instagram_logo.png" alt="Instagram"></a>
+            <a href="https://twitter.com/"><img src="images/twitter-bird-logo.png.png" alt="Twitter"></a>
         </div>
     </footer>
 </body>
