modified:   wwr/about.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -41,7 +41,7 @@
                     <figcaption>Los Dientes del Diablo</figcaption>
                 </figure>
                 <figure>
-                    <img src="image2.jpg" alt="Big Mallard">
+                    <img src="images/image2.jpg" alt="Big Mallard">
                     <figcaption>Big Mallard</figcaption>
                 </figure>
                 <figure>
