modified:   index.html 	modified:   styles.css 	modified:   wwr/about.html 	modified:   wwr/contact.html 	modified:   wwr/index.html 	modified:   wwr/site-plan-rafting.html 	modified:   wwr/styles/contact.css 	modified:   wwr/styles/site-plan-rafting.css 	new file:   wwr/styles/styles copy.css 	modified:   wwr/styles/styles.css 	modified:   wwr/trips.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="nav">
-            <img src="images/rafting.jpg" alt="Rafting logo" class="logo">
+            <a href="/index.html"><img src="images/rafting.jpg" alt="Rafting Logo" class="logo"></a> 
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
