--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -43,12 +43,15 @@
         </section>
         <section>
             <h2>Navigation</h2>
-            <nav>
-                <a href="#">Home</a>
-                <a href="#">About Us</a>
-                <a href="#">Trips</a>
-                <a href="#">Contact Us</a>
-            </nav>
+            <div class="nav">
+                <a href="/index.html"><img src="images/rafting.jpg" alt="Rafting Logo" class="logo"></a> 
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About Us</a>
+                    <a href="trips.html">Trips</a>
+                    <a href="contact.html">Contact Us</a>
+                </nav>
+            </div>
         </section>
         <section>
             <h2>Wireframes</h2>
