--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="wwr/">Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
-            <a href="/wwr/about.html">About Us</a>
-            <a href="https://www.facebook.com/Pablopy10" target="_blank">Facebook</a>
-            <a href="https://www.linkedin.com/in/paulo-barroso-b909719b/" target="_blank">LinkedIn</a>
-        </nav>
+        <div class="nav">
+            <a href="/index.html"><img src="/wwr/images/rafting.jpg" alt="Rafting Logo" class="logo"></a> 
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="wwr/">Rafting Website</a>
+                <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+                <a href="/wwr/about.html">About Us</a>
+                <a href="https://www.facebook.com/Pablopy10" target="_blank">Facebook</a>
+                <a href="https://www.linkedin.com/in/paulo-barroso-b909719b/" target="_blank">LinkedIn</a>
+            </nav>
+        </div>
     </header>
+ 
     <div class="grid">
         <main>
             <h1>Paulo Barroso | WDD130</h1>
