--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,12 +9,14 @@
 <body>
     <header>
         <div class="nav">
-            <a href="/index.html"><img src="images/rafting.jpg" alt="Rafting Logo" class="logo"></a> 
             <nav>
+                <a href="/index.html"><img src="/wwr/images/rafting.jpg" alt="Rafting Logo" class="logo"></a>
                 <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="trips.html">Trips</a>
-                <a href="contact.html">Contact Us</a>
+                <a href="wwr/">Rafting Website</a>
+                <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+                <a href="/wwr/about.html">About Us</a>
+                <a href="https://www.facebook.com/Pablopy10" target="_blank">Facebook</a>
+                <a href="https://www.linkedin.com/in/paulo-barroso-b909719b/" target="_blank">LinkedIn</a>
             </nav>
         </div>
     </header>
