--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="nav"> 
             <nav>
-                <a href="index.html"><img src="images/rafting.jpg" alt="Rafting Logo" class="logo"></a>
+                <a href="/wdd130/index.html"><img src="images/rafting.jpg" alt="Rafting Logo" class="logo"></a>
                 <a href="index.html">Home</a>
                 <a href="wwr/">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
