--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -45,7 +45,7 @@
             <h2>Navigation</h2>
             <div class="nav">
                 <nav>
-                    <a href="/index.html"><img src="/wwr/images/rafting.jpg" alt="Rafting Logo" class="logo"></a>
+                    <a href="/wdd130/index.html"><img src="/images/rafting.jpg" alt="Rafting Logo" class="logo"></a>
                     <a href="index.html">Home</a>
                     <a href="wwr/">Rafting Website</a>
                     <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
