--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -11,7 +11,7 @@
     <header>
         <div class="nav">
             <nav>
-                <a href="/index.html"><img src="images/rafting.jpg" alt="Rafting Logo" class="logo"></a> 
+                <a href="/wdd130/index.html"><img src="/images/rafting.jpg" alt="Rafting Logo" class="logo"></a> 
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="trips.html">Trips</a>
