--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -45,13 +45,11 @@
             <h2>Navigation</h2>
             <div class="nav">
                 <nav>
-                    <a href="/wdd130/index.html"><img src="/images/rafting.jpg" alt="Rafting Logo" class="logo"></a>
+                    <a href="/wdd130/index.html"><img src="/images/rafting.jpg" alt="Rafting Logo" class="logo"></a> 
                     <a href="index.html">Home</a>
-                    <a href="wwr/">Rafting Website</a>
-                    <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
-                    <a href="/wwr/about.html">About Us</a>
-                    <a href="https://www.facebook.com/Pablopy10" target="_blank">Facebook</a>
-                    <a href="https://www.linkedin.com/in/paulo-barroso-b909719b/" target="_blank">LinkedIn</a>
+                    <a href="about.html">About Us</a>
+                    <a href="trips.html">Trips</a>
+                    <a href="contact.html">Contact Us</a>
                 </nav>
             </div>
         </section>
